--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
              <div align="center" class="media_embed">  
             
                 <iframe src="https://player.vimeo.com/video/847586298?h=264b55202f" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> <!-- fifa -->
-                <iframe title="vimeo-player" src="https://player.vimeo.com/video/769109091?h=36b6dbbcf6" width="640" height="360" frameborder="0"    allowfullscreen></iframe> <!-- osiride -->
-                 <iframe src="https://player.vimeo.com/video/903793397?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Lucid dreaming"></iframe> <!-- impi pole -->
+                <iframe src="https://player.vimeo.com/video/769109091?h=36b6dbbcf6" width="640" height="360" frameborder="0"    allowfullscreen></iframe> <!-- osiride -->
+                <iframe src="https://player.vimeo.com/video/903793397?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Lucid dreaming"></iframe> <!-- impi pole -->
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/IGsjpWh2sWY?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <!-- madeira -->
                                 
 
