--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <title>sljce</title>
+    <title>Manuel Recatalà</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
