--- a/work.html
+++ b/work.html
@@ -16,7 +16,7 @@
             <h4>KYTRAME - Destroy the System</h4>
             <div class="elem-bottom">
               <iframe
-                src="https://player.vimeo.com/video/1015126970?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                src="https://player.vimeo.com/video/1015126970"
               ></iframe>
             </div>
           </div>
@@ -28,7 +28,7 @@
             <h4>Osiride</h4>
             <div class="elem-bottom">
               <iframe
-                src="https://vimeo.com/769109091"
+                src="https://player.vimeo.com/video/769109091"
               ></iframe>
             </div>
           </div>
@@ -40,7 +40,7 @@
             <h4>FIFA World Cup - Post Event Film / Editing</h4>
             <div class="elem-bottom">
               <iframe
-                src="https://vimeo.com/847586298"
+                src="https://player.vimeo.com/video/847586298"
               ></iframe>
             </div>
           </div>
@@ -52,7 +52,7 @@
             <h4>Unelma - IMPI Studio</h4>
             <div class="elem-bottom">
               <iframe
-                src="https://vimeo.com/903793397"
+                src="https://player.vimeo.com/video/903793397"
               ></iframe>
             </div>
           </div>
@@ -64,7 +64,7 @@
             <h4>Galleries Lafayette - Abaya Fashion Film</h4>
             <div class="elem-bottom">
               <iframe
-                src="https://vimeo.com/984788301"
+                src="https://player.vimeo.com/video/984788301"
               ></iframe>
             </div>
           </div>
@@ -76,7 +76,7 @@
             <h4>Life in Riyadh / Editing</h4>
             <div class="elem-bottom">
               <iframe
-                src="https://www.youtube.com/watch?v=4xsVed3DRNI&ab_channel=RiyadhExpo2030"
+                src="https://youtu.be/4xsVed3DRNI?si=OdMkhp2yHx4L-SXc"
               ></iframe>
             </div>
           </div>
