--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
       
         <div class="elem">
           <div class="elem-text">
-            <h4>Galleries Lafayette - Abaya Fashion Film</h4>
+            <h4>Galleries Lafayette - Fashion Film</h4>
             <div class="elem-bottom">
               <iframe
                 src="https://player.vimeo.com/video/984788301"
@@ -76,7 +76,7 @@
             <h4>Life in Riyadh / Editing</h4>
             <div class="elem-bottom">
               <iframe
-                src="https://youtu.be/4xsVed3DRNI?si=OdMkhp2yHx4L-SXc"
+                src="<iframe width="560" height="315" src="https://www.youtube.com/embed/4xsVed3DRNI?si=XvNnlzJ8qzsDY18C&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
               ></iframe>
             </div>
           </div>
