--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             /></a>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque,
-            necessitatibus.
+            Manuel Recatalà
+            Film Director & Editor
           </p>
           <p class="email">
             <a href="mailto:recatala.m@gmail.com">recatala.m@gmail.com</a>
