--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             /></a>
           </div>
           <p>
-            Manuel Recatalà
+            Manuel Recatalà<br />
             Film Director & Editor
           </p>
           <p class="email">
