--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
       
         <div class="elem">
           <div class="elem-text">
-            <h4>ㅤFIFA World Cup - Post Event Film / Editing</h4>
+            <h4>ㅤFIFA World Cup - Post Event Film</h4>
             <div class="elem-bottom">
               <iframe
                 src="https://player.vimeo.com/video/847586298"        <!-- FIFA -->
