--- a/index.html
+++ b/index.html
@@ -35,10 +35,20 @@
         ></iframe>
       </div>
 
-      <div class="menu">
+      
+
+      $<div class="menu">
         <h1><a href="work.html">work</a></h1>
         <h1 onclick="toggleOverlay('about')">about</h1>
-      </div>
+      </div>{
+
+    $('#dsply').hide();
+
+    setTimeout(function(){
+        $('#dsply').fadeIn('slow');
+    },6000);
+
+});
 
       <!-- About Overlay Section -->
       <div id="about-overlay" class="overlay hidden">
