--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 
 
   
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Manuel Recatalà</title>
-   <link rel="shortcut icon" href="Images/favicon.ico" type="image/x-icon" />
+    <meta name="theme-color" content="#000000"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Manuel Recatalà</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="Images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <body>
