--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             Film Director & Editor
           </p>
           <p class="email">
-            <a href="mailto:recatala.m@gmail.com">recatala.m@gmail.com</a>
+            <a href="mailto:hey@manuelrecatala.com">hey@manuelrecatala.com</a>
           </p>
         </div>
       </div>
