--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       </div>
   
       <div class="menu hidden">  <!-- Initially hidden -->
+        <h1><a href="work.html">about</a></h1>
         <h1 onclick="toggleOverlay('about')">about</h1>
-        <h1><a href="work.html">portfolio</a></h1>
       </div>
   
       <!-- About Overlay Section -->
@@ -55,10 +55,13 @@
           </div>
           <p>
             Manuel Recatalà<br />
-            Commercial and music video film director & editor. Experimenting with Ai.
+            Commercial and music video film director & editor.<br />
+            Experimenting with Ai.
+            <br />
+            <br />
           </p>
            <p>
-            <p><a href="callto:01234567890">+39 3920787719</a></p>
+            <p><a href="callto:393920787719">+39 3920787719</a></p>
           </p>
           <p class="email">
             <a href="mailto:hey@manuelrecatala.com">hey@manuelrecatala.com</a>
