--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
   
       <div class="menu hidden">  <!-- Initially hidden -->
-        <h1><a href="work.html">about</a></h1>
+        <h1><a href="work.html">work</a></h1>
         <h1 onclick="toggleOverlay('about')">about</h1>
       </div>
   
