--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
               <img src="Images/igiconwhite.png" alt=""/></a>
           </div>
           <p>
-            Manuel Recatalà<br />
+            Manuel Recatalà
+            <br />
+            <br />
             Commercial and music video film director & editor.<br />
             Experimenting with Ai.
+            <br />
             <br />
             <br />
           </p>
