--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             Manuel Recatalà
             <br />
             <br />
-            Commercial and music video film director & editor.<br />
+            Commercial and music video director & editor.<br />
             Experimenting with Ai.
             <br />
             <br />
