--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <img src="Images/igiconwhite.png" alt=""/></a>
           </div>
           <p>
-            Name
+            Manuel Recatalà
             <br />
             <br />
             Commercial and music video film director & editor.<br />
@@ -143,10 +143,10 @@
             <br />
           </p>
            <p>
-            <p><a href="callto:1234567">123457</a></p>
+            <p><a href="callto:393920787719">=+39 3920787719</a></p>
           </p>
           <p class="email">
-            <a href="mailto:hey@abc.com">abc.com</a>
+            <a href="mailto:hey@manuelrecatala.com">hey@manuelrecatala.com</a>
           </p>
         </div>
       </div>
