--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <br />
           </p>
            <p>
-            <p><a href="callto:393920787719">=+39 3920787719</a></p>
+            <p><a href="callto:393920787719">+39 3920787719</a></p>
           </p>
           <p class="email">
             <a href="mailto:hey@manuelrecatala.com">hey@manuelrecatala.com</a>
