--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
 
          <div class="gallery-container " >
            <div class="gallery-item">
-      <div class="video-title">VIDEO TITLE</div>
-      <a href="video.html?video=video1&thumb1=AI - 16_9 Thumbnail.jpg&thumb2=AI - 16_9 Thumbnail.jpg&thumb3=AI - 16_9 Thumbnail.jpg&thumb4=AI - 16_9 Thumbnail.jpg" target="_blank">
-      <img src="./thumbnail/AI - 16_9 Thumbnail.jpg" data-gif="gif/AI.gif" alt="Video Thumbnail 1">
+             
+      <div class="video-title">KYTRAME - Destroy the System</div>
+      <a href="videos/DTS.html?video=video1&thumb1=DTS1.jpg&thumb2=DTS1.jpg" target="_blank">
+      <img src="./thumbnail/DTS - 16_9 Thumbnail.jpg" data-gif="gif/DTS.gif" alt="Video Thumbnail 1">
       </a>
     </div>
     <div class="gallery-item">
