--- a/videos/DTS.html
+++ b/videos/DTS.html
@@ -12,8 +12,8 @@
     <div class="video-container">
       <div class="title">
   
-        <h3 class="video">VIDEO TITLE</h3>
-        <h3 class="category">CATEGORY</h3>
+        <h3 class="video">KYTRAME - Destroy the System</h3>
+        <h3 class="category">Music Video</h3>
       </div>
       <iframe id="video-iframe" src="" frameborder="0" allowfullscreen allow="autoplay; loop"></iframe>
     </div>
@@ -45,7 +45,7 @@
     // const thumb3 = urlParams.get('thumb3');
     // const thumb4 = urlParams.get('thumb4'); 
 
-    document.getElementById('video-iframe').src =`${video === "video1" && "https://player.vimeo.com/video/769109091"
+    document.getElementById('video-iframe').src =`${video === "video1" && "https://player.vimeo.com/video/1015126970"
     || video==="video2" && "https://player.vimeo.com/video/1015126970"  || video==="video3" && "https://player.vimeo.com/video/847586298"
      || video==="video4" && "https://player.vimeo.com/video/847586298"  || video==="video5" && "https://player.vimeo.com/video/984788301"
       || video==="video6" && "https://player.vimeo.com/video/903793397"  || video==="video7" && "https://player.vimeo.com/video/769109091"
