--- a/videos/DTS.html
+++ b/videos/DTS.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Player</title>
+  <title>KYTRAME - DTS</title>
 </head>
-<link rel="stylesheet" href="./video.css">
+<link rel="stylesheet" href="./videos/DTS.css">
 <body>
 
   <div class="video-player">
