--- a/videos/DTS.html
+++ b/videos/DTS.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KYTRAME - DTS</title>
 </head>
-<link rel="stylesheet" href="./videos/DTS.css">
+<link rel="stylesheet" href="videos/DTS.css">
 <body>
 
   <div class="video-player">
