--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manuel Recatalà</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="Images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
     <!-- <link rel="stylesheet" href="./work.css"/> -->
 </head>
 <body>
@@ -128,9 +128,9 @@
         <div class="text-container">
           <div class="icons">
             <a target="_blank" href="https://vimeo.com/sljce"
-              ><img src="Images/vimeoiconwhite.png" alt=""/></a>
+              ><img src="icons/vimeoiconwhite.png" alt=""/></a>
             <a target="_blank" href="https://www.instagram.com/sljce/">
-              <img src="Images/igiconwhite.png" alt=""/></a>
+              <img src="icons/igiconwhite.png" alt=""/></a>
           </div>
           <p>
             Manuel Recatalà
