--- a/videos/dts.html
+++ b/videos/dts.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Player</title>
+  <title>KYTRAME - Destroy the System</title>
 </head>
 <link rel="stylesheet" href="dts.css">
 <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
@@ -12,11 +12,11 @@
   <div class="video-player">
     <div class="video-container">
       <div class="title">
-        <h3 class="video">VIDEO TITLE</h3>
-        <h3 class="category">CATEGORY</h3>
+        <h3 class="video">KYTRAME - Destroy the System</h3>
+        <h3 class="category">MUSIC VIDEO</h3>
       </div>
       <!-- Removed background and autoplay for manual play -->
-      <iframe id="video-iframe" src="https://player.vimeo.com/video/1018292873?loop=1&byline=0&title=0" frameborder="0" allowfullscreen allow="loop"></iframe>
+      <iframe id="video-iframe" src="https://player.vimeo.com/video/1015126970?loop=1&byline=0&title=0" frameborder="0" allowfullscreen allow="loop"></iframe>
     </div>
 
     <div class="thumbnail-container">
@@ -26,6 +26,13 @@
       </div>
       <div class="thumbnail">
         <img id="thumb2" src="../images/DTS2.jpg" alt="Thumbnail 2">
+      <div class="thumbnail">
+        <img id="thumb3" src="../images/DTS3.jpg" alt="Thumbnail 3">
+      </div>
+      <div class="thumbnail">
+        <img id="thumb4" src="../images/DTS4.jpg" alt="Thumbnail 4">
+
+        
       </div>
     </div>
 
@@ -47,6 +54,13 @@
 
     if (thumb2) {
       document.getElementById('thumb2').src = `../thumbnail/${thumb2}`;
+    }
+        if (thumb3) {
+      document.getElementById('thumb3').src = `../thumbnail/${thumb3}`;
+    }
+
+    if (thumb4) {
+      document.getElementById('thumb4').src = `../thumbnail/${thumb4}`;
     }
   </script>
 
