--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
          <div class="gallery-container " >
            <div class="gallery-item">
-      <div class="video-title">VIDEO TITLE</div>
+      <div class="video-title">KYTRAME - Destroy the SystemE</div>
       <a href="videos/dts.html" target="_blank">
-      <img src="thumbnails/AI - 16_9 Thumbnail.jpg" data-gif="gif/AI.gif" alt="Video Thumbnail 1">
+      <img src="thumbnails/DTS - 16_9 Thumbnail.jpg" data-gif="gif/DTS.gif" alt="Video Thumbnail 1">
       </a>
     </div>
     <div class="gallery-item">
