--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
          <div class="gallery-container " >
            <div class="gallery-item">
-      <div class="video-title">KYTRAME - Destroy the SystemE</div>
+      <div class="video-title">KYTRAME - Destroy the System</div>                                          <!-- DTS -->
       <a href="videos/dts.html" target="_blank">
       <img src="thumbnails/DTS - 16_9 Thumbnail.jpg" data-gif="gif/DTS.gif" alt="Video Thumbnail 1">
       </a>
