--- a/videos/dts.html
+++ b/videos/dts.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Player</title>
   </head>
-  <link rel="stylesheet" href="./dts.css" />
+  <link rel="stylesheet" href="./videostyle.css" />
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
   <body>
     <div class="video-player">
