--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
            
            <div class="gallery-item">
       <div class="video-title">Director's Reel</div>
-      <a href="videos/REEL.html?video=video1&thumb1=REEL1.jpg&thumb2=REEL2.jpg>
-      <img src="thumbnails/REEL - 16_9 Thumbnail.jpg" data-gif="gif/REEL.gif" alt="Video Thumbnail 1">
+      <a href="videos/REEL.html?video=video1&thumb1=REEL1.jpg&thumb2=REEL2.jpg>                               
+      <img src="thumbnails/REEL - 16_9 Thumbnail.jpg" data-gif="gif/REEL.gif" alt="Thumbnail 1">
       </a>
     </div>
 
@@ -57,15 +57,15 @@
     <div class="gallery-item">
       <div class="video-title">KYTRAME - Destroy the System</div>
       <a href="videos/dts.html?video=video2&thumb1=DTS1.jpg&thumb2=DTS2.jpg&thumb3=DTS3.jpg&thumb4=DTS4.jpg">
-        <img src="thumbnails/DTS - 16_9 Thumbnail.jpg" data-gif="gif/DTS.gif" alt="Video Thumbnail 2">
+        <img src="thumbnails/DTS - 16_9 Thumbnail.jpg" data-gif="gif/DTS.gif" alt="Thumbnail 2">
       </a>
     </div>
 
            
     <div class="gallery-item">
       <div class="video-title">Osiride Ottica</div>
-      <a href="videos/oo.html?video=video2&thumb1=OO1.jpg&thumb2=OO2.jpg>
-        <img src="./thumbnails/OO - 16_9 Thumbnail.jpg" data-gif="gif/OO.gif" alt="Video Thumbnail 3">
+      <a href="videos/oo.html?video=video3&thumb1=OO1.jpg&thumb2=OO2.jpg>
+      <img src="thumbnails/OO - 16_9 Thumbnail.jpg" data-gif="gif/OO.gif" alt="Thumbnail 3">
       </a>
     </div>
 
