--- a/videos/dts.html
+++ b/videos/dts.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KYTRAME - Destroy the System</title>
+    <title>Destroy the System</title>
   </head>
   <link rel="stylesheet" href="./dts.css" />
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
