--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
            
            <div class="gallery-item">
       <div class="video-title">FIFA World Cup - Post Event Film</div>              <!-- FIFA -->
-      <a href="./videos/reel.html">
+      <a href="./videos/fifa.html">
         <img src="thumbnails/FIFA - 16_9 Thumbnail.jpg" data-gif="gif/FIFA.gif" alt="Thumbnail 4">
         </a>
     </div>
@@ -81,7 +81,7 @@
            
     <div class="gallery-item">
       <div class="video-title">Unelma - IMPI Studio</div>                          <!-- IMPI -->
-      <a href="./videos/dts.html">
+      <a href="./videos/impi.html">
         <img src="thumbnails/IMPI - 16_9 Thumbnail.jpg" data-gif="gif/IMPI.gif" alt="Thumbnail 5">
       </a>
     </div>
@@ -89,7 +89,7 @@
 
     <div class="gallery-item">
       <div class="video-title">Galleries Lafayette</div>                          <!-- GL -->
-      <a href="./videos/dts.html">
+      <a href="./videos/gl.html">
         <img src="thumbnails/GL - 16_9 Thumbnail.jpg" data-gif="gif/GL.gif" alt="Thumbnail 6">
       </a>
     </div>
