--- a/videos/fifa.html
+++ b/videos/fifa.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FIFA World Cup>
+    <title>FIFA World Cup</title>
   </head>
   <link rel="stylesheet" href="./fifa.css" />
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
