--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
            <div class="gallery-item">
       <div class="video-title">‎ </div>
       <a href="./videos/reel.html">
-        <img src="thumbnails/REEsL - 16_9 Thumbnail.jpg" data-gif="gif/REEL.gif" alt="Video Thumbnail 1">
+        <img src="thumbnails/REEsL - 16_9 Thumbnail.jpg" data-gif="gif/REEL.gif" alt=" ">
         </a>
     </div>
 
@@ -106,7 +106,7 @@
     <div class="gallery-item">
       <div class="video-title">‎ </div>
       <a href="./videos/dts.html">
-        <img src="thumbnails/DTsS - 16_9 Thumbnail.jpg" data-gif="gif/DTS.gif" alt="Thumbnail 2">
+        <img src="thumbnails/DTsS - 16_9 Thumbnail.jpg" data-gif="gif/DTS.gif" alt=" ">
       </a>
     </div>
 
@@ -114,7 +114,7 @@
     <div class="gallery-item">
       <div class="video-title">‎ </div>
       <a href="./videos/dts.html">
-        <img src="thumbnails/DTsS - 16_9 Thumbnail.jpg" data-gif="gif/DTS.gif" alt="Thumbnail 2">
+        <img src="thumbnails/DTsS - 16_9 Thumbnail.jpg" data-gif="gif/DTS.gif" alt=" ">
       </a>
     </div>
            
