--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <br />
             <br />
             Commercial and music video director & editor.<br />
-            Experimenting with Ai.
+            Working with film, digital and ai.
             <br />
             <br />
             <br />
