--- a/videos/gl.html
+++ b/videos/gl.html
@@ -16,7 +16,7 @@
         </div>
         <iframe
           id="video-iframe"
-          src="https://www.youtube.com/watch?v=4xsVed3DRNI&ab_channel=Expo2030Riyadh"
+          src="https://www.youtube.com/embed/4xsVed3DRNI?si=UTY6py2s4d1rquwg"
           <!-- src="https://player.vimeo.com/video/984788301" -->
           frameborder="0"
           allowfullscreen
