--- a/videos/gl.html
+++ b/videos/gl.html
@@ -7,7 +7,7 @@
   </head>
   <link rel="stylesheet" href="./gl.css" />
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
-  <body>
+  <body style="padding: 0; margin: 0;">
     <div class="video-player">
       <div class="video-container">
         <div class="title">
