--- a/videos/gl.html
+++ b/videos/gl.html
@@ -7,7 +7,7 @@
   </head>
   <link rel="stylesheet" href="./gl.css" />
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
-  <body style="padding: 0; margin: 0;">
+  <body>
     <div class="video-player">
       <div class="video-container">
         <div class="title">
@@ -16,8 +16,8 @@
         </div>
         <iframe
           id="video-iframe"
-          src="https://www.youtube.com/embed/4xsVed3DRNI?si=UTY6py2s4d1rquwg"
-          <!-- src="https://player.vimeo.com/video/984788301" -->
+           <!-- src="https://www.youtube.com/embed/4xsVed3DRNI?si=UTY6py2s4d1rquwg" -->
+          src="https://player.vimeo.com/video/984788301"
           frameborder="0"
           allowfullscreen
           allow="autoplay; loop"
