--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <br />
             <br />
             Commercial and music video director & editor. <br>
-Working with film, digital and ai.
+Working with digital, negative and ai.
             <br />
             <br />
             <br />
