--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
             Manuel Recatalà
             <br />
             <br />
-            Commercial and music video director & editor. <br>
-Working with digital, negative and ai.
+            Commercial and music video director & editor.  <!-- usa <br> per andare a capo -->
             <br />
             <br />
             <br />
