--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
 
            <div class="gallery-item">
-      <div class="video-title">Director's Reel</div>                               <!-- REEL -->
-      <a href="./videos/reel.html">
-        <img src="thumbnails/REEL - 16_9 Thumbnail.jpg" data-gif="gif/REEL.gif" alt="Thumbnail 2">
+      <div class="video-title">Japan Airlines</div>                               <!-- JP -->
+      <a href="./videos/jp.html">
+        <img src="thumbnails/JP - 16_9 Thumbnail.jpg" data-gif="gif/JP.gif" alt="Thumbnail 2">
         </a>
     </div>
            
