Update and rename reel.html to jp.html

--- a/videos/jp.html
+++ b/videos/jp.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Director's Reel</title>
+    <title>Japan Airlines</title>
   </head>
-  <link rel="stylesheet" href="./reel.css" />
+  <link rel="stylesheet" href="./jp.css" />
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
   <body>
     <div class="video-player">
       <div class="video-container">
         <div class="title">
-          <h3 class="video">Director's Reel</h3>
-          <h3 class="category">2025</h3>
+          <h3 class="video">Japan Airlines</h3>
+          <h3 class="category">Commercial</h3>
         </div>
         <iframe
           id="video-iframe"
@@ -25,10 +25,10 @@
 
       <div class="thumbnail-container">
         <div class="thumbnail">
-          <img id="thumb1" src="../images/REEL1.jpg" alt="Still 1" />
+          <img id="thumb1" src="../images/JP1.jpg" alt="Still 1" />
         </div>
         <div class="thumbnail">
-          <img id="thumb2" src="../images/REEL2.jpg" alt="Still 2" />
+          <img id="thumb2" src="../images/JP2.jpg" alt="Still 2" />
         </div>
 
         </div>
