--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
            <div class="gallery-item">
-      <div class="video-title">Japan Airlines</div>                               <!-- JP -->
+      <div class="video-title">JAL - Beyond a Destination</div>                               <!-- JP -->
       <a href="./videos/jp.html">
         <img src="thumbnails/JP - 16_9 Thumbnail.jpg" data-gif="gif/JP.gif" alt="Thumbnail 2">
         </a>
