--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             Manuel Recatalà
             <br />
             <br />
-            Commercial and music video director & editor.  <!-- usa <br> per andare a capo -->
+            Commercial, AI and music video director & editor.  <!-- usa <br> per andare a capo -->
             <br />
             <br />
             <br />
@@ -137,3 +137,4 @@
   </body>
   <script src="./script.js"></script>
 </html>
+
