--- a/videos/SOKAI.html
+++ b/videos/SOKAI.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Galleries Lafayette</title>
+    <title>SOK - Luode12 FW25</title>
   </head>
   <link rel="stylesheet" href="./gl.css" />
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
@@ -11,12 +11,12 @@
     <div class="video-player">
       <div class="video-container">
         <div class="title">
-          <h3 class="video">Galleries Lafayette</h3>
-          <h3 class="category">FASHION FILM</h3>
+          <h3 class="video">SOK - Luode12 FW25</h3>
+          <h3 class="category">AI COMMERCIAL</h3>
         </div>
         <iframe
           id="video-iframe"
-          src="https://player.vimeo.com/video/984788301"
+          src="https://player.vimeo.com/video/1118779000"
           frameborder="0"
           allowfullscreen
           allow="autoplay; loop"
@@ -25,10 +25,10 @@
 
       <div class="thumbnail-container">
         <div class="thumbnail">
-          <img id="thumb1" src="../images/GL1.jpg" alt="Thumbnail 1" />
+          <img id="thumb1" src="../images/SOKAI1.jpg" alt="Thumbnail 1" />
         </div>
         <div class="thumbnail">
-          <img id="thumb2" src="../images/GL2.jpg" alt="Thumbnail 2" />
+          <img id="thumb2" src="../images/SOKAI2.jpg" alt="Thumbnail 2" />
         </div>
         </div>
       </div>
@@ -38,3 +38,4 @@
     </div>
   </body>
 </html>
+
