--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
     <div class="gallery-item">
       <div class="video-title">Galleries Lafayette</div>                          <!-- GL -->
-      <a href="./videos/sokai.html">
-        <img src="thumbnails/SOKAI - 16_9 Thumbnail.jpg" data-gif="gif/GL.gif" alt="Thumbnail 6">
+      <a href="./videos/gl.html">
+        <img src="thumbnails/GL - 16_9 Thumbnail.jpg" data-gif="gif/GL.gif" alt="Thumbnail 6">
       </a>
     </div>
            
@@ -137,5 +137,6 @@
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
