--- a/videos/sokai.html
+++ b/videos/sokai.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SOK - Luode12 FW25</title>
   </head>
-  <link rel="stylesheet" href="./gl.css" />
+  <link rel="stylesheet" href="./sokai.css" />
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
   <body>
     <div class="video-player">
@@ -38,4 +38,5 @@
     </div>
   </body>
 </html>
+
 
