--- a/videos/expo.html
+++ b/videos/expo.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Destroy the System</title>
   </head>
-  <link rel="stylesheet" href="./dts.css" />
+  <link rel="stylesheet" href="./expo.css" />
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
   <body>
     <div class="video-player">
       <div class="video-container">
         <div class="title">
-          <h3 class="video">KYTRAME - Destroy the System</h3>
-          <h3 class="category">MUSIC VIDEO</h3>
+          <h3 class="video">Riyadh Expo 2030</h3>
+          <h3 class="category">Editing</h3>
         </div>
         <iframe
           id="video-iframe"
-          src="https://player.vimeo.com/video/1015126970"
+          src="https://www.youtube.com/watch?v=4xsVed3DRNI"
           frameborder="0"
           allowfullscreen
           allow="autoplay; loop"
@@ -25,16 +25,11 @@
 
       <div class="thumbnail-container">
         <div class="thumbnail">
-          <img id="thumb1" src="../images/DTS1.jpg" alt="Still 1" />
+          <img id="thumb1" src="../images/EXPO1.jpg" alt="Still 1" />
         </div>
         <div class="thumbnail">
-          <img id="thumb2" src="../images/DTS2.jpg" alt="Still 2" />
+          <img id="thumb2" src="../images/EXPO2.jpg" alt="Still 2" />
         </div>
-        <div class="thumbnail">
-          <img id="thumb3" src="../images/DTS3.jpg" alt="Still 3" />
-        </div>
-        <div class="thumbnail">
-          <img id="thumb4" src="../images/DTS4.jpg" alt="Still 4" />
         </div>
       </div>
       <footer class="footer">
@@ -44,3 +39,4 @@
     
   </body>
 </html>
+
