--- a/videos/expo.html
+++ b/videos/expo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Destroy the System</title>
+    <title>Riyadh Expo 2030</title>
   </head>
   <link rel="stylesheet" href="./expo.css" />
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
@@ -39,4 +39,5 @@
     
   </body>
 </html>
+
 
