--- a/videos/expo.html
+++ b/videos/expo.html
@@ -16,7 +16,7 @@
         </div>
         <iframe
           id="video-iframe"
-          src="https://vimeo.com/1119117985"
+          src="https://player.vimeo.com/video/1119117985"
           frameborder="0"
           allowfullscreen
           allow="autoplay; loop"
@@ -39,6 +39,7 @@
     
   </body>
 </html>
+
 
 
 
