--- a/videos/jp.html
+++ b/videos/jp.html
@@ -12,7 +12,7 @@
       <div class="video-container">
         <div class="title">
           <h3 class="video">Japan Airlines</h3>
-          <h3 class="category">Commercial</h3>
+          <h3 class="category">COMMERCIAL</h3>
         </div>
         <iframe
           id="video-iframe"
@@ -40,3 +40,4 @@
     
   </body>
 </html>
+
