--- a/videos/expo.html
+++ b/videos/expo.html
@@ -12,7 +12,7 @@
       <div class="video-container">
         <div class="title">
           <h3 class="video">Riyadh Expo 2030</h3>
-          <h3 class="category">Editing</h3>
+          <h3 class="category">EDITING</h3>
         </div>
         <iframe
           id="video-iframe"
@@ -39,6 +39,7 @@
     
   </body>
 </html>
+
 
 
 
