--- a/videos/exo.html
+++ b/videos/exo.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SOK - Luode12 FW25</title>
+    <title>EXOLYT</title>
   </head>
-  <link rel="stylesheet" href="./sokai.css" />
+  <link rel="stylesheet" href="./exo.css" />
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
   <body>
     <div class="video-player">
       <div class="video-container">
         <div class="title">
-          <h3 class="video">SOK - Luode12 FW25</h3>
-          <h3 class="category">AI COMMERCIAL</h3>
+          <h3 class="video">EXOLYT</h3>
+          <h3 class="category">BRAND FILM</h3>
         </div>
         <iframe
           id="video-iframe"
-          src="https://player.vimeo.com/video/1118779000"
+          src="https://player.vimeo.com/video/1146549642"
           frameborder="0"
           allowfullscreen
           allow="autoplay; loop"
@@ -25,10 +25,10 @@
 
       <div class="thumbnail-container">
         <div class="thumbnail">
-          <img id="thumb1" src="../images/SOKAI1.jpg" alt="Thumbnail 1" />
+          <img id="thumb1" src="../images/EXO1.jpg" alt="Thumbnail 1" />
         </div>
         <div class="thumbnail">
-          <img id="thumb2" src="../images/SOKAI2.jpg" alt="Thumbnail 2" />
+          <img id="thumb2" src="../images/EXO2.jpg" alt="Thumbnail 2" />
         </div>
         </div>
       </div>
@@ -38,5 +38,6 @@
     </div>
   </body>
 </html>
+
 
 
