--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
            
            <div class="gallery-container">
 				<div class="gallery-item" >
-				  <div class="video-title">Riyadh EXPO 2030</div>                             <!-- EXPO -->
+				  <div class="video-title">Exolyt</div>                             <!-- EXO -->
 				  <a href="./videos/expo.html">
-					<img src="thumbnails/EXPO - 16_9 Thumbnail.jpg" data-gif="gif/EXPO.gif" alt="Thumbnail 5">
+					<img src="thumbnails/EXO - 16_9 Thumbnail.jpg" data-gif="gif/EXO.gif" alt="Thumbnail 5">
 				  </a>
 				</div>
 
@@ -165,6 +165,7 @@
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
 
