--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 
 
                <div class="gallery-item">
-				  <div class="video-title">SOK - Luode12 FW25</div>                            <!-- SOKAI -->
-				  <a href="./videos/sokai.html">
-					<img src="thumbnails/SOKAI - 16_9 Thumbnail.jpg" data-gif="gif/SOKAI.gif" alt="Thumbnail 3">
+				  <div class="video-title">Exolyt - Brand Film</div>                            <!-- EXO -->
+				  <a href="./videos/exo.html">
+					<img src="thumbnails/exo - 16_9 Thumbnail.jpg" data-gif="gif/EXO.gif" alt="Thumbnail 3">
 				  </a>
 				</div>
 			</div>
@@ -100,9 +100,9 @@
            
            <div class="gallery-container">
 				<div class="gallery-item" >
-				  <div class="video-title">Riyadh EXPO 2030</div>                             <!-- EXPO -->
-				  <a href="./videos/expo.html">
-					<img src="thumbnails/EXPO - 16_9 Thumbnail.jpg" data-gif="gif/EXPO.gif" alt="Thumbnail 5">
+				  <div class="video-title">SOK - Luode12 FW25</div>                             <!-- SOKAI -->
+				  <a href="./videos/sokai.html">
+					<img src="thumbnails/SOKAI - 16_9 Thumbnail.jpg" data-gif="gif/SOKAI.gif" alt="Thumbnail 5">
 				  </a>
 				</div>
 
@@ -165,6 +165,7 @@
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
 
