--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                <div class="gallery-item">
 				  <div class="video-title">Exolyt - Brand Film</div>                            <!-- EXO -->
 				  <a href="./videos/exo.html">
-					<img src="thumbnails/exo - 16_9 Thumbnail.jpg" data-gif="gif/EXO.gif" alt="Thumbnail 3">
+					<img src="thumbnails/EXO - 16_9 Thumbnail.jpg" data-gif="gif/EXO.gif" alt="Thumbnail 3">
 				  </a>
 				</div>
 			</div>
@@ -165,6 +165,7 @@
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
 
