--- a/index.html
+++ b/index.html
@@ -147,7 +147,14 @@
             Manuel Recatalà
             <br />
             <br />
-            Commercial, AI and music video director & editor.  <!-- usa <br> per andare a capo -->
+            <i>A fun and cooperative atmosphere on set, where everyone feels heard and appreciated, is what I value most.</i>
+			<br />
+			<br />
+I am an editor and young director who loves the pressure of a film production and aims to achieve the best possible result within its tight timeframes.
+			<br />
+My background as an editor leads me to focus on seamless cuts and unpredictable solutions that capture the viewer’s attention. As a director, dynamic storytelling is what truly drives me. Designing a narrative through my own voice and watching it come together, is where I find real joy and satisfaction.
+			<br />
+I’ve been working with AI and continue to study it as a creative tool, exploring how it can support my craft without losing its human touch.  <!-- usa <br> per andare a capo -->
             <br />
             <br />
             <br />
@@ -165,6 +172,7 @@
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
 
