--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <i>A fun and cooperative atmosphere on set, where everyone feels heard and appreciated, is what I value most.</i>
 			<br />
 			<br />
-I am an editor and young director who loves the pressure of a film production and aims to achieve the best possible result within its tight timeframes.
+I am a commercial editor and young director who loves the pressure of a film production and aims to achieve the best possible result within its tight timeframes.
 			<br />
 My background as an editor leads me to focus on seamless cuts and unpredictable solutions that capture the viewer’s attention. As a director, dynamic storytelling is what truly drives me. Designing a narrative through my own voice and watching it come together, is where I find real joy and satisfaction.
 			<br />
@@ -172,6 +172,7 @@ I’ve been working with AI and continue to study it as a creative tool, explori
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
 
