--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			<br />
 			<br />
 I am a commercial editor and young director who loves the pressure of a film production and aims to achieve the best possible result within its tight timeframes.
-My background as an editor leads me to focus on seamless cuts and unpredictable solutions that capture the viewer’s attention. As a director, designing a dynamic narrative through my own voice and watching it come together, is where I find real joy and satisfaction
+My background as an editor leads me to focus on seamless cuts and unpredictable solutions that capture the viewer’s attention. As a director, designing a dynamic narrative through my own voice and watching it come together, is where I find real joy and satisfaction.
 			<br />
 I’ve been working with AI and continue to study it as a creative tool, exploring how it can support my craft without losing its human touch.  <!-- usa <br> per andare a capo -->
             <br />
@@ -171,6 +171,7 @@ I’ve been working with AI and continue to study it as a creative tool, explori
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
 
