--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
             Manuel Recatalà
             <br />
             <br />
+			  <font size="5">
             <i>A fun and cooperative atmosphere on set, where everyone feels heard and appreciated, is what I value most.</i>
 			<br />
 			<br />
@@ -154,6 +155,7 @@ I am a commercial editor and young director who loves the pressure of a film pro
 My background as an editor leads me to focus on seamless cuts and unpredictable solutions that capture the viewer’s attention. As a director, designing a dynamic narrative through my own voice and watching it come together, is where I find real joy and satisfaction.
 			<br />
 I’ve been working with AI and continue to study it as a creative tool, exploring how it can support my craft without losing its human touch.  <!-- usa <br> per andare a capo -->
+			</font>
             <br />
             <br />
             <br />
@@ -171,6 +173,7 @@ I’ve been working with AI and continue to study it as a creative tool, explori
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
 
