--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ I am a commercial editor and young director who loves the pressure of a film pro
 			<br />
 My focus is on seamless cuts and dynamic narratives, whatching them come together is where I find real joy and satisfaction.
 			<br />
-Working with ai, keeping the human touch.  <!-- usa <br> per andare a capo -->
+Generating films, always with a human touch.  <!-- usa <br> per andare a capo -->
 			</font>
             <br />
             <br />
@@ -174,6 +174,7 @@ Working with ai, keeping the human touch.  <!-- usa <br> per andare a capo -->
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
 
