--- a/index.html
+++ b/index.html
@@ -148,12 +148,9 @@
             <br />
             <br />
 			  <font size="3">
-            <i>A fun and cooperative atmosphere on set, where everyone feels heard and appreciated, is what I value most.</i>
-			<br />
-			<br />
 I am a commercial editor and young director who loves the pressure of a film production.
 			<br />
-My focus is on seamless cuts and dynamic narratives, whatching them come together is where I find real joy and satisfaction.
+My focus is on seamless cuts and dynamic narratives, watching them come together is where I find real joy and satisfaction.
 			<br />
 			<br />
 Making and generating films, always with a human touch.  <!-- usa <br> per andare a capo -->
@@ -175,6 +172,7 @@ Making and generating films, always with a human touch.  <!-- usa <br> per andar
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
 
