--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
               <img src="icons/igiconwhite.png" alt=""/></a>
           </div>
           <p>
+            <br />
+              <img src="icons/profile.png" alt=""/></a>
+            <br />
+            <br />
             Manuel Recatalà
             <br />
             <br />
@@ -171,6 +175,7 @@ Making and generating films, always with a human touch.  <!-- usa <br> per andar
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
 
