--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </div>
           <p>
             <br />
-              <img src="icons/profile.png" alt=""/></a>
+			  <img src="icons/profile.png" alt="profile" width="600" height="600">
             <br />
             <br />
             Manuel Recatalà
@@ -175,6 +175,7 @@ Making and generating films, always with a human touch.  <!-- usa <br> per andar
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
 
