--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
               ><img src="icons/vimeoiconwhite.png" alt=""/></a>
             <a target="_blank" href="https://www.instagram.com/sljce/">
               <img src="icons/igiconwhite.png" alt=""/></a>
+          <div class="profile">
+              <img src="icons/profile.png" alt=""/></a>
           </div>
           <p>
-            <br />
-			  <img src="icons/profile.png" alt="profile" width="600" height="600">
             <br />
             <br />
             Manuel Recatalà
@@ -175,6 +175,7 @@ Making and generating films, always with a human touch.  <!-- usa <br> per andar
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
 
