--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             Manuel Recatalà
             <br />
 			  <font size="3">
-I am a commercial editor and young director who loves the pressure of a film production.
+I am a commercial editor and director specialised in lifestyle, travel and fashion.
 			<br />
 My focus is on seamless cuts and dynamic narratives, watching them come together is where I find real joy and satisfaction.
 			<br />
@@ -170,6 +170,7 @@ Making and generating films, always with a human touch.  <!-- usa <br> per andar
   </body>
   <script src="./script.js"></script>
 </html>
+
 
 
 
